# ParallelsProgramming

./: README.md
hdfs/hdfstask1/: getting_server_by_file_name.py  run.sh
hdfs/hdfstask2/: .hdfscli.cfg  getting_first_bytes_of_file.py  run.sh
hdfs/hdfstask3/: getting_number_of_blocks.py  run.sh
hdfs/hdfstask4/: getting_block_info.py  run.sh
hdfs/hdfstask5/: run.py  run.sh
hive/task4_1/: aoaoa  create_ipregions.hql  create_logs.hql  create_part_logs.hql  create_subnets.hql  create_users.hql
hive/task4_2/: task_421.hql
hive/task4_3/: example.sql
hive/task4_4/: task_461.hql
hive/task4_5/: script.sh  task_471.hql  temp
mapreduce/task110/: mapper.py  reducer.py  run.sh
mapreduce/task111/: mapper1.py  mapper2.py  reducer1.py  reducer2.py  run.sh  run1.sh  temp.txt
mpi/: CMakeLists.txt  README.md  graph.py  main.cpp
spark/: 05-spark-base_nb.ipynb
spark/.ipynb_checkpoints/: 05-spark-base_nb-checkpoint.ipynb
spark/task1/: run.sh  task1.py  taskaa.py
spark/task2/: run.sh  task2.py
